# apisec-graphql-dvga

./: .gitignore  README.md  app.py  config.py  pyproject.toml  schema.graphql
core/: db_init.py  db_migrate.py  models.py  schema.py
design/: dvga_deployment.md  dvga_ec2_deployment.md  ec2_deployment.md
scripts/: cleanup.sh  deploy.sh  deploy_dvga.sh
